<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('promotion_rules', function (Blueprint $table) {
            $table->id();
            $table->foreignId('promotion_id')->constrained('promotions')->cascadeOnDelete();
            $table->enum('applicable_type', ['menu', 'category']);
            $table->unsignedBigInteger('applicable_id');
            $table->timestamps();

            $table->index(['applicable_type', 'applicable_id']);
            $table->unique(['promotion_id', 'applicable_type', 'applicable_id'], 'promotion_rules_unique_rule');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('promotion_rules');
    }
};